[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "module"
dynamic = ["version", "description"]  
readme = "README.md"
license = { file = "LICENSE" }


authors = [
  { name="author", email="author@example.com" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["module*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.setuptools.dynamic]
description = { file = ["disc.text"] }